--- a/en/intro.mdx
+++ b/en/intro.mdx
@@ -8,16 +8,16 @@ description: "Complete guide to Gridix - a platform for creating and managing in
 Gridix is a powerful platform designed for real estate developers to create, manage, and showcase interactive floor plans with ease. Transform your property sales process with modern visualization tools, lead management, and CRM integrations.
 
 <CardGroup cols={2}>
-  <Card title="Getting Started" icon="rocket" href="/en/getting-started/registration">
+  <Card title="Getting Started" icon="rocket" href="/getting-started/registration">
     Start your journey with Gridix - from registration to your first project in minutes.
   </Card>
-  <Card title="Admin Panel" icon="settings" href="/en/admin-panel/overview">
+  <Card title="Admin Panel" icon="settings" href="/admin-panel/overview">
     Learn how to manage projects, settings, and team members in the admin dashboard.
   </Card>
-  <Card title="Project Management" icon="building" href="/en/projects/creation">
+  <Card title="Project Management" icon="building" href="/projects/creation">
     Create and manage real estate projects with interactive floor plans and apartment data.
   </Card>
-  <Card title="Lead Management" icon="users" href="/en/leads/overview">
+  <Card title="Lead Management" icon="users" href="/leads/overview">
     Track and manage leads from your projects with advanced filtering and CRM integration.
   </Card>
 </CardGroup>
@@ -72,10 +72,10 @@ Choose from Basic or Pro plans with flexible billing options. Enjoy discounts fo
 
 ## What's Next?
 
-- **[Getting Started Guide](/en/getting-started/registration)** - Complete step-by-step guide for new users
-- **[Admin Panel Overview](/en/admin-panel/overview)** - Learn about the admin dashboard features
-- **[Project Creation](/en/projects/creation)** - Detailed guide on creating your first project
-- **[CRM Integration](/en/crm-integrations/amocrm)** - Connect AmoCRM for automated lead management
+- **[Getting Started Guide](/getting-started/registration)** - Complete step-by-step guide for new users
+- **[Admin Panel Overview](/admin-panel/overview)** - Learn about the admin dashboard features
+- **[Project Creation](/projects/creation)** - Detailed guide on creating your first project
+- **[CRM Integration](/crm-integrations/amocrm)** - Connect AmoCRM for automated lead management
 
 ## Need Help?
 
@@ -84,4 +84,3 @@ Join our Telegram support channel for quick assistance: [@gridix_bot](https://t.
 </Tip>
 
 Our support team is available 24/7 to help you get the most out of Gridix. Whether you're setting up your first project or configuring advanced integrations, we're here to help.
-
